# MS_other

./: .gitignore  encoder_log_2025-02-18.txt  readme.md  typing_latency_test_results.txt
code/PhoneProximityDetector/: AppConfig.cs  BluetoothDetector.cs  DetectedDevice.cs  NRFDetector.cs  PhoneProximityDetector.csproj  Program.cs  ProximityDetector.cs  README.md  VerboseLogger.cs  WiFiDetector.cs
code/android/: .gitignore  readme.md
code/bandwidht_via_perfcounters/: bandwidht_via_perfcounters.sln
code/c/: New Text Document.c  bisec.c
code/fun/: 3d_cube.py  best_day_to_sell.py  matrix_gpu_accel.py  matrix_katanaka.py  matrix_with_management.py  matrix_with_management_V2.py
code/fun/tower_defense_cpp/: CMakeLists.txt  Game.cpp  Game.h  GameConfig.h  GameStructs.h  Main.cpp  Path.h
code/games/: explosiom_mouse_driven.py  explosion.py  explosion_v2.py
code/graphic_tools/: hyperbolic_plane.py  readme.md
code/ml_samples/: open_ai_simple_call.py
code/network_tools/: open_ports.py  (+1 more)
experiments/: conway_3d.py  conways_game_of_life.py  conways_game_of_life_faster.py  readme.md
graphic_tools/: background_removal.py
perf_tools/: click_latency.py  click_latency_one_run.py  click_latency_test.py  compare.py  decoder_log.txt  mouse_movement_latency.py  scroll_latency.py  speed-test-05-02-25.csv  test.py  type_latency_test.py  typing_latency.py  typing_latency_test.py  typing_latency_test_results.txt
random_tools/: paint.py
selenium/: bing_search.py  faking_mouse_movement.py  powerpoint_creation.py  team.py  user_a_no_team.py  user_a_no_teams.py
(+478 files in other folders)
